// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarStack should render correctly 1`] = `
<DocumentFragment>
  .cache-xb0pbe-StyledContainer {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  overflow: hidden;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, #ffffff1A 25%,
        #4f0599 25%, #4f0599 50%,
        #ffffff1A 50%, #ffffff1A 75%, #4f0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4f0599;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+2) {
  background-color: #4f0599D9;
  background-image: linear-gradient(
          135deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f6f6f833 25%,
          #4f059912 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, #ffffff1A 25%,
        #4f05994D 25%, #4f05994D 50%,
        #ffffff1A 50%, #ffffff1A 75%, #4f05994D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #a365f6;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+4) {
  background-color: #a365f6;
  background-image: linear-gradient(
          135deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #ffffff33 25%,
          #a365f6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, #ffffff40 25%,
        #a365f640 25%, #a365f640 50%,
        #ffffff40 50%, #ffffff40 75%, #a365f640
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #a365f6BF;
}

.cache-1du5n5p-StyledBarWrapper {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #ffffff;
}

.cache-db81d4-StyledBar {
  height: 50px;
  font-weight: 600;
  color: #ffffff;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #4a4f62B3,0 1px #4a4f62B3,1px 0 #4a4f62B3,0 -1px #4a4f62B3;
}

<div
    class="cache-xb0pbe-StyledContainer e17nk4tl0"
  >
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 10.638297872340425%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Hello
      </div>
    </div>
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      />
    </div>
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Encore
      </div>
    </div>
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Next
      </div>
    </div>
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Bye bye
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack should render correctly with event handlers 1`] = `
<DocumentFragment>
  .cache-xb0pbe-StyledContainer {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  overflow: hidden;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, #ffffff1A 25%,
        #4f0599 25%, #4f0599 50%,
        #ffffff1A 50%, #ffffff1A 75%, #4f0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4f0599;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+2) {
  background-color: #4f0599D9;
  background-image: linear-gradient(
          135deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f6f6f833 25%,
          #4f059912 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, #ffffff1A 25%,
        #4f05994D 25%, #4f05994D 50%,
        #ffffff1A 50%, #ffffff1A 75%, #4f05994D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #a365f6;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+4) {
  background-color: #a365f6;
  background-image: linear-gradient(
          135deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #ffffff33 25%,
          #a365f6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, #ffffff40 25%,
        #a365f640 25%, #a365f640 50%,
        #ffffff40 50%, #ffffff40 75%, #a365f640
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #a365f6BF;
}

.cache-1du5n5p-StyledBarWrapper {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #ffffff;
}

.cache-db81d4-StyledBar {
  height: 50px;
  font-weight: 600;
  color: #ffffff;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #4a4f62B3,0 1px #4a4f62B3,1px 0 #4a4f62B3,0 -1px #4a4f62B3;
}

<div
    class="cache-xb0pbe-StyledContainer e17nk4tl0"
  >
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 100%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Hello
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack should render correctly with total 1`] = `
<DocumentFragment>
  .cache-xb0pbe-StyledContainer {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 0px 8px 2px #D4DAE766;
  overflow: hidden;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, #ffffff1A 25%,
        #4f0599 25%, #4f0599 50%,
        #ffffff1A 50%, #ffffff1A 75%, #4f0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4f0599;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+2) {
  background-color: #4f0599D9;
  background-image: linear-gradient(
          135deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #f6f6f833 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #f6f6f833 25%,
          #4f059912 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, #ffffff1A 25%,
        #4f05994D 25%, #4f05994D 50%,
        #ffffff1A 50%, #ffffff1A 75%, #4f05994D
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #a365f6;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+4) {
  background-color: #a365f6;
  background-image: linear-gradient(
          135deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          #ffffff33 25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          #ffffff33 25%,
          #a365f6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-xb0pbe-StyledContainer .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, #ffffff40 25%,
        #a365f640 25%, #a365f640 50%,
        #ffffff40 50%, #ffffff40 75%, #a365f640
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #a365f6BF;
}

.cache-1du5n5p-StyledBarWrapper {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #ffffff;
}

.cache-db81d4-StyledBar {
  height: 50px;
  font-weight: 600;
  color: #ffffff;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 #4a4f62B3,0 1px #4a4f62B3,1px 0 #4a4f62B3,0 -1px #4a4f62B3;
}

<div
    class="cache-xb0pbe-StyledContainer e17nk4tl0"
  >
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 2%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Hello
      </div>
    </div>
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      />
    </div>
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Encore
      </div>
    </div>
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Next
      </div>
    </div>
    <div
      class="cache-1du5n5p-StyledBarWrapper e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-db81d4-StyledBar e17nk4tl1"
      >
        Bye bye
      </div>
    </div>
  </div>
</DocumentFragment>
`;
